# TranslateUncorrectLayout

./: .gitignore  Cargo.toml  README.md  build.rs  tray-data.rc
assets/: culture_info.json
src/: config.rs  console_handler.rs  kb_output.rs  lib.rs  main.rs  tray_icon.rs
src/config/: console_handler.rs  mod.rs
tests/: config_tests.rs
