[package]
name = "translate_app"
version = "0.1.3"
edition = "2021"
authors = ["Maxim Guc", "Gest Se <gestjobm@gmail.com>"]
readme = "README.md"
repository = "https://github.com/jestsi/TranslateUncorrectLayout"
license-file = "LICENSE"

[dependencies]
clipboard = "0.5.0"
winput = "0.2.5"
keybd_event = "0.1.2"
serde_json = "1.0.91"
winapi = {version = "0.3", features = ["wincon", "winuser"]}
tray-item = "*"
open = "3.2.0"

[build-dependencies]
windres = "0.2.2"

[dependencies.serde]
version = "1.0.152"
features = ["serde_derive", "default"]